AKS-Setup/openhack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: api-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  namespace: api-dev
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registrywos0810.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: user-java
  namespace: api-dev
spec:
  ports:
  - port: 80
  selector:
    app: user-java
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api-dev
  labels:
    app: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: registrywos0810.azurecr.io/tripinsights/poi:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: poi
  namespace: api-dev
spec:
  ports:
  - port: 80
  selector:
    app: poi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api-dev
  labels:
    app: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registrywos0810.azurecr.io/tripinsights/trips:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api-dev
spec:
  ports:
  - port: 80
  selector:
    app: trips
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: api-dev
  labels:
    app: userprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registrywos0810.azurecr.io/tripinsights/userprofile:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: api-dev
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  namespace: web-dev
  labels:
    app: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registrywos0810.azurecr.io/tripinsights/tripviewer:1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web-dev
spec:
  ports:
  - port: 80
  selector:
    app: tripviewer
